--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2017": "^6.24.1",
     "browserify": "^16.1.1",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^3.2.0",
